fix background problem on iphone

--- a/style/style.css
+++ b/style/style.css
@@ -693,10 +693,12 @@ body {
   }
 
   .main .header {
+    background: url("../img/resources/background.png") no-repeat  center center fixed;
     -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-attachment: scroll !important;
     background-position-x: 50%;
     height: auto;
   }
